<resources>
    <string name="app_name">Resume 2015</string>
    <string name="my_name">Martin Hutchens</string>
    <string name="my_email">HutchensMartin@gmail.com</string>
    <string name="my_github">8BitYoda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_call">Call</string>
    <string name="action_email">Email</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_fragment_experience">Experience</string>

    <string name="title_fragment_toolbox">Technical Toolbox</string>

    <!-- GitHub WebActivity-->
    <string name="title_activity_git_web">8BitYoda\'s GitHub</string>
    <string name="action_refresh">Refresh Page</string>

    <!-- Education Strings -->
    <string name="title_fragment_education">Education</string>
    <string name="csu_title">Charleston Southern</string>
    <string name="csu_degree">Bachelor of Science in Computer Science</string>
    <string name="csu_gradYear">2015</string>
    <string name="csu_summary">2nd Place in CDCA Mobile App competition with senior project SmartBaby</string>
    <string name="csu_sum_sub"><i>Project Scope</i>: A wearable baby monitor for parents to monitor their child’s heart rate and temperature from their mobile device</string>
    <string name="csu_sum_sub2"><i>Tools</i>: Android Studio, Arduino (C/C++), Git</string>
    <string name="csu_summary2">University Scholar 2010-15 </string>
    <string name="csu_summary3">Treasurer of Charleston Southern’s ACM Club 2013-14</string>
    <string name="csu_summary4">Member of CSU’s D1 Cross Country and  Indoor/Outdoor Track teams 2011-13</string>
    <string name="ph_title">Patrick Henry Community College</string>
    <string name="ph_degree">Associates of Arts and Science</string>
    <string name="ph_gradYear">2010</string>

    <!-- About Strings -->
    <string name="title_fragment_about">Martin Hutchens</string>
    <string name="about_email">HutchensMartin@gmail.com</string>
    <string name="about_github">GitHub: 8BitYoda</string>
    <string name="about_cell">cell: (555)555-5555</string>
    <string name="sub1_fragment_about">Professional Summary</string>
    <string name="about_summary">Motivated and reliable Entry Level Java Developer with an excellent work ethic and programming language knowledge base</string>
    <string name="about_summary2">Junior Android developer able to build applications from concept to final product to the client’s or project’s specifications</string>
    <string name="about_summary3">Experienced in object-oriented programming; development, testing, and debugging code; design interfaces; and working with backend databases</string>
    <string name="about_summary4">Able to work well independently or as part of a professional development team in order to meet and achieve project goals</string>
    <string name="bullet">•</string>
    <string name="title_activity_experience_item">Experience Item</string>
    <string name="action_settings">Settings</string>

    <!-- Experience Strings-->
    <string name="expr1_summary">Worked with clients to build and develop Android applications</string>
    <string name="expr1_summary2">Used Java to develop applications to meet client goals</string>
    <string name="expr1_summary3">Built, maintained and supported databases for use with websites and mobile applications</string>
    <string name="expr1_summary4">Organized application version control with Git and Bitbucket</string>
    <string name="expr1_title">Intern</string>
    <string name="expr2_summary">Worked with other team members to provide excellent customer service</string>
    <string name="expr2_summary2">Developed better multi-tasking and problem solving skills in a high stress environment</string>
    <string name="expr2_summary3">Established and improved my sales and marketing skills</string>
    <string name="expr2_title">Server</string>

</resources>
