<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/csu_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/csu_photo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/logo_csu"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/csu_photo">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/csu_name"
                        android:layout_alignParentTop="true"
                        android:text="@string/csu_title"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/csu_degree"
                        android:text="@string/csu_degree"
                        android:textSize="14sp"
                        android:layout_below="@+id/csu_name" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/csu_degree">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/csu_date"
                            android:text="@string/csu_gradYear"
                            android:textSize="12sp"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:id="@+id/expand_details"
                            android:src="@drawable/down"
                            android:gravity="right"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/csu_expandable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/ColorPrimary"/>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="8dp">

                        <TableRow
                            android:id="@+id/row1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"
                                android:paddingLeft="4dp"
                                android:paddingRight="8dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/csu_summary"
                                android:fontFamily="sans-serif-medium"
                                android:textSize="14sp"
                                android:layout_weight="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/subRow1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"
                                android:paddingLeft="4dp"
                                android:paddingRight="8dp"
                                android:textSize="12sp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/csu_sum_sub"
                                android:fontFamily="sans-serif"
                                android:textSize="12sp"
                                android:layout_weight="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/subRow2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:textSize="12sp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/csu_sum_sub2"
                                android:fontFamily="sans-serif"
                                android:textSize="12sp"
                                android:layout_weight="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/row2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"
                                android:paddingLeft="4dp"
                                android:paddingRight="8dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/csu_summary2"
                                android:fontFamily="sans-serif-medium"
                                android:textSize="14sp"
                                android:layout_weight="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/row3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"
                                android:paddingLeft="4dp"
                                android:paddingRight="8dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/csu_summary3"
                                android:fontFamily="sans-serif-medium"
                                android:textSize="14sp"
                                android:layout_weight="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/row4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bullet"
                                android:paddingLeft="4dp"
                                android:paddingRight="8dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/csu_summary4"
                                android:fontFamily="sans-serif-medium"
                                android:paddingBottom="4dp"
                                android:textSize="14sp"
                                android:layout_weight="2" />
                        </TableRow>
                    </TableLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/ph_photo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/logo_phcc"
                android:layout_centerVertical="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ph_photo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ph_name"
                    android:layout_alignParentTop="true"
                    android:text="@string/ph_title"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ph_degree"
                    android:text="@string/ph_degree"
                    android:textSize="14sp"
                    android:layout_below="@+id/ph_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ph_date"
                    android:text="@string/ph_gradYear"
                    android:textSize="12sp"
                    android:layout_below="@+id/ph_degree" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
